--- a/index.html
+++ b/index.html
@@ -1,42 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>GIPHY API</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-    <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-
-    <title>Giphy-Api</title>
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
-
 <body>
-    <div class="container">
-        <form>
-            <div class="form-group">
-                <label for="">Search for Giphys</label>
-                <input type="text" class="form-control" name="" id="input" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-primary" id="submit">Submit</button>
-        </form>
-        <br>
 
-        <div class="results">
-            <div class="panel panel-default">
-                <div class="panel-body img-body">
-                    <div class="img-box"></div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="buttonsArea"></div>
 
-    <script src="main.js"></script>
-</div>
+    <form id="search-form">
+        <label for="search-input">Add in your search!</label>
+        <input type="text" id="search-input"><br>
+        <input type="submit" value="Submit">
+    </form>
+
+<div id="searches"></div>
+
+<script src="javascript.js" type="text/javascript"></script>
+
 </body>
-
 </html>
